Update tutto quanto (quasi)

--- a/models.ipynb
+++ b/models.ipynb
@@ -6743,6 +6743,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "r1, r2, r3\n",
+    "\n",
+    "(1 + r1) ... (1+r3)\n",
+    "\n",
+    "1 * (1+r1) * (1 + r2) * ... * (1+rn) = 1,13 (e.g.)\n",
+    "\n",
+    "rtot (from 1 to n) = 1,13 - 1  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
@@ -6867,6 +6880,13 @@
    "outputs": [],
    "source": [
     "choices = pred_performance_ARIMA.sort_values(ascending=False).index[:7]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-------"
    ]
   },
   {
@@ -7154,109 +7174,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>EL FP Equity</th>\n",
-       "      <th>ASML NA Equity</th>\n",
-       "      <th>AIR FP Equity</th>\n",
-       "      <th>MC FP Equity</th>\n",
-       "      <th>PHIA NA Equity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2018-12-03</th>\n",
-       "      <td>-0.004736</td>\n",
-       "      <td>0.015893</td>\n",
-       "      <td>-0.005353</td>\n",
-       "      <td>0.032362</td>\n",
-       "      <td>-0.005783</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-12-04</th>\n",
-       "      <td>0.000957</td>\n",
-       "      <td>0.000971</td>\n",
-       "      <td>-0.008355</td>\n",
-       "      <td>-0.006201</td>\n",
-       "      <td>0.011449</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-12-05</th>\n",
-       "      <td>0.004651</td>\n",
-       "      <td>-0.014072</td>\n",
-       "      <td>-0.009691</td>\n",
-       "      <td>0.002304</td>\n",
-       "      <td>-0.011140</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-12-06</th>\n",
-       "      <td>0.016473</td>\n",
-       "      <td>-0.006225</td>\n",
-       "      <td>-0.007455</td>\n",
-       "      <td>-0.012617</td>\n",
-       "      <td>0.004389</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-12-07</th>\n",
-       "      <td>-0.004418</td>\n",
-       "      <td>-0.015268</td>\n",
-       "      <td>0.003600</td>\n",
-       "      <td>0.005195</td>\n",
-       "      <td>0.002339</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            EL FP Equity  ASML NA Equity  AIR FP Equity  MC FP Equity  \\\n",
-       "2018-12-03     -0.004736        0.015893      -0.005353      0.032362   \n",
-       "2018-12-04      0.000957        0.000971      -0.008355     -0.006201   \n",
-       "2018-12-05      0.004651       -0.014072      -0.009691      0.002304   \n",
-       "2018-12-06      0.016473       -0.006225      -0.007455     -0.012617   \n",
-       "2018-12-07     -0.004418       -0.015268       0.003600      0.005195   \n",
-       "\n",
-       "            PHIA NA Equity  \n",
-       "2018-12-03       -0.005783  \n",
-       "2018-12-04        0.011449  \n",
-       "2018-12-05       -0.011140  \n",
-       "2018-12-06        0.004389  \n",
-       "2018-12-07        0.002339  "
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_exc_ret[choices].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
    "outputs": [
@@ -7297,6 +7214,8 @@
     }
    ],
    "source": [
+    "# Calculate the performance of the portfolio (equal weight on my preselected stocks)\n",
+    "\n",
     "sum(cum_exc_returns_choices * (1/7))"
    ]
   },
@@ -7304,7 +7223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the weighted average with weight 1/N of the excess returns of the top 10 stocks selected by the ARIMA model is NEGATIVE, the alpha of our portfolio is negative hence this strategy underperforms the market performance."
+    "Since the weighted average with weight 1/N of the excess returns of the top 7 stocks selected by the ARIMA model is NEGATIVE, the alpha of our portfolio is negative hence this strategy underperforms the SX5E index performance; for the period considered. "
    ]
   },
   {
