--- a/3. LSTMs.ipynb
+++ b/3. LSTMs.ipynb
@@ -2323,6 +2323,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Could save the predictions of the model(s) in a pickle file and load them on an ptf_optimization.ipynb notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "----------------\n",
     "\n",
     "### DO NOT CONSIDER CODE BELOW"
