--- a/3. LSTMs.ipynb
+++ b/3. LSTMs.ipynb
@@ -972,7 +972,7 @@
     "    y_test_inverse = scaler.inverse_transform(y_test_reshaped)\n",
     "    return yhat_inverse, y_test_inverse\n",
     "\n",
-    "\n",
+    "# aggregated metrics\n",
     "def evaluate_forecast(y_test_inverse, yhat_inverse):\n",
     "    mse_ = tf.keras.losses.MeanSquaredError()\n",
     "    mae_ = tf.keras.losses.MeanAbsoluteError()\n",
@@ -984,6 +984,8 @@
     "    mape = mape_(y_test_inverse,yhat_inverse)\n",
     "    print('mape:', mape.numpy())\n",
     "\n",
+    "\n",
+    "# metrics for each stock\n",
     "def calculate_metrics(y_test_inverse, yhat_inverse, tukey):\n",
     "    metrics_df = pd.DataFrame(columns=['Stock', 'MAE', 'MSE', 'MAPE'])\n",
     "    mse_ = tf.keras.losses.MeanSquaredError()\n",
@@ -1672,7 +1674,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CNN-LSTM"
+    "### CNN encoder - LSTM decoder"
    ]
   },
   {
