plot top N (not finished)

--- a/2. Multi-ts models.ipynb
+++ b/2. Multi-ts models.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Independent Multiple Time Series Forecasting: \n",
+    "# Independent Multiple Time Series Forecasting: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Forecast multiple time series with a single model, but each time series remains independent of the others, meaning that past values of one series are not used as predictors of other series. However, modeling them together is useful because the series may follow the same intrinsic pattern regarding their past and future values.\n",
     "\n",
     "This will be used for several reasons:\n",
@@ -22,7 +28,26 @@
     "#### Disadvantages of multi-series\n",
     "- If the series do not follow the same internal dynamics, the model may learn a pattern that does not represent any of them.\n",
     "- The series may mask each other, so the model may not predict all of them with the same performance.\n",
-    "- It is more computationally demanding (time and resources) to train and backtest a big model than several small ones."
+    "- It is more computationally demanding (time and resources) to train and backtest a big model than several small ones.\n",
+    "\n",
+    "#### Why LightGBM?\n",
+    "Tree-based algorithm, fast, efficient, scalable. One of the best models for time series forecasting. As the other GB algorithms, it builds a series of decision trees iteratively. Each tree tries to correct the mistakes made by the previous ones. Trees are built minimizing the loss function by adding weak learners in a sequential manner, where each subsequent tree learns from the residuals of the ensemble of trees built so far.\n",
+    "\n",
+    "Unlike traditional depth-wise tree growth, LightGBM uses a leaf-wise growth strategy. Instead of growing the tree level by level (breadth-wise), LightGBM chooses the leaf with the maximum delta loss to grow. This results in a more balanced tree and reduces the number of levels in the tree, which contributes to faster training times.\n",
+    "\n",
+    "LigthGBM also uses 2 other techniques that make this algorithm really effective: GOSS and EFB.\n",
+    "- Gradient-based One-Side Sampling (GOSS) to reduce the number of data instances used for training each tree. GOSS keeps the instances with large gradients (which contribute more to the learning process) and randomly samples the instances with small gradients. This allows for faster training without sacrificing much in terms of model performance.\n",
+    "- Exclusive Feature Bundling (EFB) to further improve efficiency. EFB groups exclusive features together during training, allowing for reduced memory usage and faster computation.\n",
+    "\n",
+    "#### What we will do...\n",
+    "We will employ a simple, straight-forward, random, not-tuned, with no exogenous variables nor feature engineered LightGBM first on individual stocks and then a global model on the whole dataset (independent forecasting) and we will compare them. We will then perform preselection according to the predictions (with and without backtesting) and check the performance of the portfolios."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing Libraries"
    ]
   },
   {
@@ -65,24 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Why LightGBM?\n",
-    "Tree-based algorithm, fast, efficient, scalable. One of the best models for time series forecasting. As the other GB algorithms, it builds a series of decision trees iteratively. Each tree tries to correct the mistakes made by the previous ones. Trees are built minimizing the loss function by adding weak learners in a sequential manner, where each subsequent tree learns from the residuals of the ensemble of trees built so far.\n",
-    "\n",
-    "Unlike traditional depth-wise tree growth, LightGBM uses a leaf-wise growth strategy. Instead of growing the tree level by level (breadth-wise), LightGBM chooses the leaf with the maximum delta loss to grow. This results in a more balanced tree and reduces the number of levels in the tree, which contributes to faster training times.\n",
-    "\n",
-    "LigthGBM also uses 2 other techniques that make this algorithm really effective: GOSS and EFB.\n",
-    "- Gradient-based One-Side Sampling (GOSS) to reduce the number of data instances used for training each tree. GOSS keeps the instances with large gradients (which contribute more to the learning process) and randomly samples the instances with small gradients. This allows for faster training without sacrificing much in terms of model performance.\n",
-    "- Exclusive Feature Bundling (EFB) to further improve efficiency. EFB groups exclusive features together during training, allowing for reduced memory usage and faster computation.\n",
-    "\n",
-    "#### What we will do...\n",
-    "We will employ a simple, straight-forward, random, not-tuned, with no exogenous variables nor feature engineered LightGBM first on individual stocks and then a global model on the whole dataset (independent forecasting) and we will compare them. We will then perform preselection according to the predictions (with and without backtesting) and check the performance of the portfolios."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Load data"
+    "## Load data"
    ]
   },
   {
@@ -821,7 +829,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Train - Test split"
+    "## Data Splitting"
    ]
   },
   {
@@ -866,7 +874,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Individual forecaster for each Stock"
+    "## Individual forecaster for each Stock"
    ]
   },
   {
@@ -926,7 +934,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Multiseries forecaster"
+    "## Multiseries forecaster"
    ]
   },
   {
@@ -1197,7 +1205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Comparison: Single vs Multiple time series forecaster"
+    "## Comparison: Single vs Multiple time series forecaster"
    ]
   },
   {
@@ -1887,9 +1895,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looks like that using a multi time series forecaster is simply better.\n",
-    "\n",
-    "---"
+    "Looks like that using a multi time series forecaster is simply better."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Models Evaluation"
    ]
   },
   {
@@ -2285,12 +2298,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Portfolio creation, optimization and comparison:\n",
-    "- ranking the predictions\n",
-    "- selecting stocks\n",
-    "- calculate performance of portfolios for different N selections\n",
-    "- plot the portfolios\n",
-    "- compare with index"
+    "## Portfolio creation, optimization and comparison (Multiseries): "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Ranking the predictions\n",
+    "- Selecting stocks\n",
+    "- Calculate performance of portfolios for different N selections\n",
+    "- Plot the portfolios\n",
+    "- Compare with index"
    ]
   },
   {
@@ -5255,6 +5274,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Models Evaluation (no Backtesting)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -5690,12 +5716,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Portfolio creation, optimization and comparison:\n",
-    "- ranking the predictions\n",
-    "- selecting stocks\n",
-    "- calculate performance of portfolios for different N selections\n",
-    "- plot the portfolios\n",
-    "- compare with index"
+    "## Portfolio creation, optimization and comparison (Multiseries and no Backtesting):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Ranking the predictions\n",
+    "- Selecting stocks\n",
+    "- Calculate performance of portfolios for different N selections\n",
+    "- Plot the portfolios\n",
+    "- Compare with index"
    ]
   },
   {
@@ -8647,20 +8679,6 @@
    "source": [
     "plot_portfolios(portfolio_series_LGBM, test_index_series)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
