--- a/trials/4. Globals.ipynb
+++ b/trials/4. Globals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
      "text": [
       "torch version: 2.2.0+cpu\n",
       "torchaudio version: 2.2.0+cpu\n",
-      "torchvision version: 0.17.0+cpu+dreaming_of_a_3090\n"
+      "torchvision version: 0.17.0+cpu\n"
      ]
     }
    ],
@@ -22,14 +22,23 @@
     "\n",
     "print(\"torch version:\", torch.__version__)\n",
     "print(\"torchaudio version:\", torchaudio.__version__)\n",
-    "print(\"torchvision version:\", torchvision.__version__+\"+dreaming_of_a_3090\")"
+    "print(\"torchvision version:\", torchvision.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\plotly_resampler\\aggregation\\aggregators.py:25: UserWarning: Could not import lttbc; will use a (slower) python alternative.\n",
+      "  warnings.warn(\"Could not import lttbc; will use a (slower) python alternative.\")\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
