--- a/2. Multi-ts models.ipynb
+++ b/2. Multi-ts models.ipynb
@@ -15,8 +15,8 @@
     "\n",
     "This will be used for several reasons:\n",
     "- Baseline model\n",
-    "- what can we expect?\n",
-    "- is it useful to use more sophisticated models? (Seq2Seq Deep Learning models) are they better?\n",
+    "- What can we expect?\n",
+    "- Is it useful to use more sophisticated models? (Seq2Seq Deep Learning models) are they better?\n",
     "\n",
     "Multi-series forecasts do not always outperform single-series forecasts. Which one works best depends largely on the characteristics of the use case to which they are applied.\n",
     "\n",
@@ -36,8 +36,8 @@
     "Unlike traditional depth-wise tree growth, LightGBM uses a leaf-wise growth strategy. Instead of growing the tree level by level (breadth-wise), LightGBM chooses the leaf with the maximum delta loss to grow. This results in a more balanced tree and reduces the number of levels in the tree, which contributes to faster training times.\n",
     "\n",
     "LigthGBM also uses 2 other techniques that make this algorithm really effective: GOSS and EFB.\n",
-    "- Gradient-based One-Side Sampling (GOSS) to reduce the number of data instances used for training each tree. GOSS keeps the instances with large gradients (which contribute more to the learning process) and randomly samples the instances with small gradients. This allows for faster training without sacrificing much in terms of model performance.\n",
-    "- Exclusive Feature Bundling (EFB) to further improve efficiency. EFB groups exclusive features together during training, allowing for reduced memory usage and faster computation.\n",
+    "- **Gradient-based One-Side Sampling** (GOSS) to reduce the number of data instances used for training each tree. GOSS keeps the instances with large gradients (which contribute more to the learning process) and randomly samples the instances with small gradients. This allows for faster training without sacrificing much in terms of model performance.\n",
+    "- **Exclusive Feature Bundling** (EFB) to further improve efficiency. EFB groups exclusive features together during training, allowing for reduced memory usage and faster computation.\n",
     "\n",
     "#### What we will do...\n",
     "We will employ a simple, straight-forward, random, not-tuned, with no exogenous variables nor feature engineered LightGBM first on individual stocks and then a global model on the whole dataset (independent forecasting) and we will compare them. We will then perform preselection according to the predictions and check the performance of the portfolios."
@@ -63,6 +63,9 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import quantstats as qs\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, mean_absolute_percentage_error\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
     "\n",
     "# one of the best models for time series forecasting, as research and production deployments examples demonstrate\n",
     "from lightgbm import LGBMRegressor\n",
@@ -112,7 +115,6 @@
    "outputs": [],
    "source": [
     "# create test set of returns for the benchmark (SX5E index)\n",
-    "\n",
     "test_index_ret = index.loc['2017-01-02':]"
    ]
   },
@@ -474,6 +476,13 @@
    ],
    "source": [
     "data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to fill up the series with the missing days since this type of model works only if the series is full, so basically if there are not any jumps between days"
    ]
   },
   {
@@ -890,6 +899,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we built a **Forecast Autoregressor** object that instanciate a LightGBM model that will be fitted every time on a different time series. This approach will surely be more time consuming, but for the sake of the project we tried also this approach."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -953,6 +969,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As we said before, after trying with an individual forecaster on each stock we decided to try to fit a \"global\" model that works passing as input the entire dataframe  with the series. The function **ForecasterAutoregMultiSeries** always creates an instance of a LightGBM model.\n",
+    "\n",
     "The function, **backtesting_forecaster_multiseries**, is designed for evaluating the performance of a forecaster model (such as autoregressive models for time series forecasting) using a backtesting approach. Backtesting is a technique commonly used in forecasting to assess how well a model would have performed on historical data. This function is specifically tailored for multi-series and multivariate forecasters, meaning it can handle cases where you have multiple time series or multiple predictors."
    ]
   },
@@ -1837,13 +1855,22 @@
     }
    ],
    "source": [
-    "fig, ax=plt.subplots(figsize=(8, 4))\n",
+    "\"\"\"fig, ax=plt.subplots(figsize=(8, 4))\n",
     "data_test['EOAN GY Equity'].plot(ax=ax)\n",
     "predictions['EOAN GY Equity'].plot(ax=ax)\n",
     "predictions_ms['EOAN GY Equity'].plot(ax=ax)\n",
     "ax.legend(['real', 'predictions single forecaster', 'predictions multi series forecaster'])\n",
     "ax.set_xlabel('')\n",
-    "ax.set_title('Positive improvement example: Forecasting for EOAN GY Equity')"
+    "ax.set_title('Positive improvement example: Forecasting for EOAN GY Equity')\"\"\"\n",
+    "\n",
+    "traces = []\n",
+    "traces.append(go.Scatter(x=data_test.index, y=data_test['EOAN GY Equity'], name='Real'), mode='lines')\n",
+    "traces.append(go.Scatter(x=predictions['EOAN GY Equity'].index, y=predictions['EOAN GY Equity'], name='Predictions Single Forecaster', mode='lines'))\n",
+    "traces.append(go.Scatter(x=predictions_ms['EOAN GY Equity'].index, y=predictions_ms['EOAN GY Equity'], name='Predictions Multi Series Forecaster', mode='lines'))\n",
+    "\n",
+    "layout = go.Layout(title='Positive improvement example: Forecasting for EOAN GY Equity', xaxis=dict(title='Date'), yaxis=dict(title='Price'))\n",
+    "fig = go.Figure(data=traces, layout=layout)\n",
+    "fig.show(rendere='svg')"
    ]
   },
   {
@@ -1873,13 +1900,22 @@
     }
    ],
    "source": [
-    "fig, ax=plt.subplots(figsize=(8, 4))\n",
+    "\"\"\"fig, ax=plt.subplots(figsize=(8, 4))\n",
     "data_test['IBE SQ Equity'].plot(ax=ax)\n",
     "predictions['IBE SQ Equity'].plot(ax=ax)\n",
     "predictions_ms['IBE SQ Equity'].plot(ax=ax)\n",
     "ax.legend(['real', 'predictions single forecaster', 'predictions multi series forecaster'])\n",
     "ax.set_xlabel('')\n",
-    "ax.set_title('Negative improvement example: Forecasting for IBE SQ Equity')"
+    "ax.set_title('Negative improvement example: Forecasting for IBE SQ Equity')\"\"\"\n",
+    "\n",
+    "traces = []\n",
+    "traces.append(go.Scatter(x=data_test.index, y=data_test['IBE SQ Equity'], name='Real'), mode='lines')\n",
+    "traces.append(go.Scatter(x=predictions['EOAN GY Equity'].index, y=predictions['IBE SQ Equity'], name='Predictions Single Forecaster', mode='lines'))\n",
+    "traces.append(go.Scatter(x=predictions_ms['EOAN GY Equity'].index, y=predictions_ms['IBE SQ Equity'], name='Predictions Multi Series Forecaster', mode='lines'))\n",
+    "\n",
+    "layout = go.Layout(title='Negative improvement example: Forecasting for IBE SQ Equity', xaxis=dict(title='Date'), yaxis=dict(title='Price'))\n",
+    "fig = go.Figure(data=traces, layout=layout)\n",
+    "fig.show(rendere='svg')"
    ]
   },
   {
@@ -1909,13 +1945,22 @@
     }
    ],
    "source": [
-    "fig, ax=plt.subplots(figsize=(8, 4))\n",
+    "\"\"\"fig, ax=plt.subplots(figsize=(8, 4))\n",
     "data_test['VIV FP Equity'].plot(ax=ax)\n",
     "predictions['VIV FP Equity'].plot(ax=ax)\n",
     "predictions_ms['VIV FP Equity'].plot(ax=ax)\n",
     "ax.legend(['real', 'predictions single forecaster', 'predictions multi series forecaster'])\n",
     "ax.set_xlabel('')\n",
-    "ax.set_title('Similar predictions example: Forecasting for VIV FP Equity')"
+    "ax.set_title('Similar predictions example: Forecasting for VIV FP Equity')\"\"\"\n",
+    "\n",
+    "traces = []\n",
+    "traces.append(go.Scatter(x=data_test.index, y=data_test['VIV FP Equity'], name='Real'), mode='lines')\n",
+    "traces.append(go.Scatter(x=predictions['EOAN GY Equity'].index, y=predictions['VIV FP Equity'], name='Predictions Single Forecaster', mode='lines'))\n",
+    "traces.append(go.Scatter(x=predictions_ms['EOAN GY Equity'].index, y=predictions_ms['VIV FP Equity'], name='Predictions Multi Series Forecaster', mode='lines'))\n",
+    "\n",
+    "layout = go.Layout(title='Similar predictions example: Forecasting for VIV FP Equity', xaxis=dict(title='Date'), yaxis=dict(title='Price'))\n",
+    "fig = go.Figure(data=traces, layout=layout)\n",
+    "fig.show(rendere='svg')"
    ]
   },
   {
@@ -2298,7 +2343,7 @@
     "num_rows = 3\n",
     "num_cols = 5\n",
     "\n",
-    "fig, axs = plt.subplots(num_rows, num_cols, figsize=(20, 9))\n",
+    "\"\"\"fig, axs = plt.subplots(num_rows, num_cols, figsize=(20, 9))\n",
     "\n",
     "for i, stock in enumerate(stocks_to_plot):\n",
     "    row = i // num_cols\n",
@@ -2318,7 +2363,27 @@
     "\n",
     "plt.xlabel('Date')\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\"\"\"\n",
+    "\n",
+    "fig = make_subplots(rows=num_rows, cols=num_cols, subplot_titles=[data_test.iloc[:, stock].name for stock in stocks_to_plot])\n",
+    "\n",
+    "for i, stock in enumerate(stocks_to_plot):\n",
+    "    row = i // num_cols + 1\n",
+    "    col = i % num_cols + 1\n",
+    "\n",
+    "    fig.add_trace(go.Scatter(x=data_test.index, y=data_test.iloc[:, stock], mode='lines', name='Test Data'), row=row, col=col)\n",
+    "    fig.add_trace(go.Scatter(x=predictions_ms.index, y=predictions_ms.iloc[:, stock], mode='lines', name='Predictions'), row=row, col=col)\n",
+    "\n",
+    "    fig.update_yaxes(title_text='Stock Value', row=row, col=col)\n",
+    "\n",
+    "# Hide empty subplots\n",
+    "for i in range(len(stocks_to_plot) + 1, num_rows * num_cols + 1):\n",
+    "    row = i // num_cols + 1\n",
+    "    col = i % num_cols + 1\n",
+    "    fig.update_layout(showlegend=False, xaxis_title='Date', yaxis_title='Stock Value', row=row, col=col)\n",
+    "\n",
+    "fig.update_layout(title_text='Stock Data and Predictions', height=600, width=1200)\n",
+    "fig.show(renderer='svg')"
    ]
   },
   {
